WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41854
RenderSVGRoot does not include border/padding while repainting
https://bugs.webkit.org/show_bug.cgi?id=41854
Summary
RenderSVGRoot does not include border/padding while repainting
Nikolas Zimmermann
Reported
2010-07-08 07:26:39 PDT
RenderSVGRoot does not include border/padding while repainting - this leads to repainting artifacts.
Attachments
Initial patch
(484.61 KB, patch)
2010-07-08 07:43 PDT
,
Nikolas Zimmermann
krit
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2010-07-08 07:43:32 PDT
Created
attachment 60876
[details]
Initial patch
Dirk Schulze
Comment 2
2010-07-08 08:06:52 PDT
Comment on
attachment 60876
[details]
Initial patch r=me
Nikolas Zimmermann
Comment 3
2010-07-08 23:56:42 PDT
***
Bug 14015
has been marked as a duplicate of this bug. ***
Nikolas Zimmermann
Comment 4
2010-07-09 02:33:46 PDT
Landed in
r62922
. Waiting for bots to be able to update other platforms results.
WebKit Review Bot
Comment 5
2010-07-09 02:48:29 PDT
http://trac.webkit.org/changeset/62922
might have broken GTK Linux 32-bit Release and Qt Linux Release
Nikolas Zimmermann
Comment 6
2010-07-09 03:05:00 PDT
Landed first set of new results for qt/gtk, and 4 mac results I misssed in
r62925
.
Nikolas Zimmermann
Comment 7
2010-07-09 03:47:31 PDT
Next round of gtk fixes in
r62929
and
r62930
. Ossy is taken care of Qt.
Nikolas Zimmermann
Comment 8
2010-07-09 03:59:24 PDT
Next round of fixes: qt results in
r62932
(thanks ossy!), and win results in
r62933
. Crossing fingers, maybe this was the last commit needed.
Nikolas Zimmermann
Comment 9
2010-07-09 04:09:14 PDT
Landed last round of qt fixes in
r62934
.
Nikolas Zimmermann
Comment 10
2010-07-09 04:35:45 PDT
Next round of gtk fixes:
r62936
and
r62938
(hopefully the last one).
Nikolas Zimmermann
Comment 11
2010-07-09 05:12:19 PDT
Added mac-tiger specific results in
r62943
.
Nikolas Zimmermann
Comment 12
2010-07-09 05:32:54 PDT
Closing bug, everthing except tiger turned green again. Tiger will turn green soon, still waiting for new results.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug