2010-07-08  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Dirk Schulze.

        RenderSVGRoot does not include border/padding while repainting
        https://bugs.webkit.org/show_bug.cgi?id=41854

        RenderSVGRoot does not include border/padding in the repaint rect.
        clippedOverflowRectForRepaint() was missing. Affects all DRT results,
        as <svg> now gets properly sized.

        Test: svg/custom/repaint-moving-svg-and-div.xhtml

        * rendering/RenderSVGRoot.cpp:
        (WebCore::RenderSVGRoot::repaintRectInLocalCoordinates):
        (WebCore::RenderSVGRoot::clippedOverflowRectForRepaint):
        * rendering/RenderSVGRoot.h:

2010-07-08  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        RenderSVGRoot does not include border/padding while repainting
        https://bugs.webkit.org/show_bug.cgi?id=41854

        Update most textual results as <svg> now receives a proper size and location.
        NOTE: This requires updating more platform specific results, after landing with the help of the buildbots.

        * platform/mac-leopard/svg/custom/junk-data-expected.txt:
        .... (stripped long list)


Canonical link: https://commits.webkit.org/53812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62922 268f45cc-cd09-0410-ab3c-d52691b4dbfc