WebCore/rendering/RenderSVGRoot.cpp
@@ -266,10 +266,15 @@ FloatRect RenderSVGRoot::strokeBoundingBox() const
 
 FloatRect RenderSVGRoot::repaintRectInLocalCoordinates() const
 {
-    // FIXME: This does not include the border but it should!
     FloatRect repaintRect = SVGRenderSupport::computeContainerBoundingBox(this, SVGRenderSupport::RepaintBoundingBox);
     style()->svgStyle()->inflateForShadow(repaintRect);
+    repaintRect.inflate(borderAndPaddingWidth());
     return repaintRect;
+}
+
+IntRect RenderSVGRoot::clippedOverflowRectForRepaint(RenderBoxModelObject* repaintContainer)
+{
+    return SVGRenderSupport::clippedOverflowRectForRepaint(this, repaintContainer);
 }
 
 void RenderSVGRoot::computeRectForRepaint(RenderBoxModelObject* repaintContainer, IntRect& repaintRect, bool fixed)
